store conifg example

--- a/Angular/ngrx-example/src/app/my-counter/my-counter.component.html
+++ b/Angular/ngrx-example/src/app/my-counter/my-counter.component.html
@@ -4,3 +4,6 @@
 <button id="reset" (click)="reset()">Reset</button>
 
 <div> Current count: {{ count$ | async}} </div>
+<div>Ref data: {{(refData$|async).refData}}</div>
+
+<div>String data: {{stringData$|async}}</div>
